element with id 'circle' now chnages color on click

--- a/exercise1.html
+++ b/exercise1.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Exercise 1</title>
 		<link rel="stylesheet" href="exercise1.css" />
-		<script src="exercise.js"></script>
+		<script src="exercise1.js"></script>
 	</head>
 	<body>
 
