--- a/exercise5.html
+++ b/exercise5.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Exercise 5</title>
-		<link rel="stylesheet" href="exercise1.css" />
-		<script src="exercise5.js"></script>
-	</head>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Week 5 beginner exercise5</title>
+	<script src="exercise5.js"></script>		
+	<link rel="stylesheet" href="exercise1.css">
+	
+</head>
 	<body>
 
 	<div id="circle">
